Fix too big shit

--- a/craft/web/assets/css/styles.css
+++ b/craft/web/assets/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    overflow-x: hidden;
+    overflow-x: hidden!important;
     color: #fff!important;
 }
 
